--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -22,10 +22,9 @@
                     </div>
 
                     <ul>
-                        <li><span class="span-info"><i class="glyphicon glyphicon-map-marker"></i> Adress:</span> New York, NY.<br /><br /></li>
+                        <li><span class="span-info"><i class="glyphicon glyphicon-map-marker"></i> Adress:</span> New York, NY.</li>
                         <li><span class="span-info"><i class="glyphicon glyphicon-envelope"></i> Email:</span> haoning.wu@nyu.edu</li>
                         <li><span class="span-info"><i class="glyphicon glyphicon-phone"></i> Phone:</span> +(917) 302-5403</li>
-                        <li><span class="span-info"><i class="glyphicon glyphicon-globe"></i> Website:</span> www.brown-smith.com</li>
                     </ul>
                 </div>
                 <!-- /Contact Info -->
@@ -41,8 +40,8 @@
             
 
                     <div id="profile_social">
-                        <a href="#"><i class="fa fa-linkedin"></i>https://www.linkedin.com/in/haoningwu/</a>
-                        <a href="#"><i class="fa fa-github"></i>https://github.com/wuhoward</a>
+                        <a href="https://www.linkedin.com/in/haoningwu/"><i class="fa fa-linkedin"></i></a>
+                        <a href="https://github.com/wuhoward"><i class="fa fa-github"></i></a>
                         <div class="clear"></div>
                     </div>
       
