--- a/_includes/cv.html
+++ b/_includes/cv.html
@@ -18,7 +18,7 @@
         <div class="skills">
             <!-- .skillbar -->
             <div class="skillbar clearfix" data-percent="95%">
-                <div class="skillbar-title"><span>Photoshop</span></div>
+                <div class="skillbar-title"><span>Research</span></div>
                 <div class="skillbar-bar"></div>
                 <div class="skill-bar-percent">95%</div>
             </div>
@@ -26,26 +26,18 @@
             <!-- /.skillbar -->
             
             <!-- .skillbar -->
-            <div class="skillbar clearfix" data-percent="90%">
-                <div class="skillbar-title"><span>Illustrateur</span></div>
+            <div class="skillbar clearfix" data-percent="95%">
+                <div class="skillbar-title"><span>Machine Learning</span></div>
                 <div class="skillbar-bar"></div>
-                <div class="skill-bar-percent">90%</div>
+                <div class="skill-bar-percent">95%</div>
             </div>
             <!-- /.skillbar -->
             
             <!-- .skillbar -->
             <div class="skillbar clearfix" data-percent="65%">
-                <div class="skillbar-title"><span>Indesign</span></div>
+                <div class="skillbar-title"><span>Computer Architecture</span></div>
                 <div class="skillbar-bar"></div>
                 <div class="skill-bar-percent">65%</div>
-            </div>
-            <!-- /.skillbar -->
-            
-            <!-- .skillbar -->
-            <div class="skillbar clearfix" data-percent="35%">
-                <div class="skillbar-title"><span>Flash</span></div>
-                <div class="skillbar-bar"></div>
-                <div class="skill-bar-percent">35%</div>
             </div>
             <!-- /.skillbar -->
         </div>
@@ -53,41 +45,41 @@
         
         <!-- .title_content -->
         <div class="title_content" style="float: none;">
-            <div class="text_content">Programming Skills</div>
+            <div class="text_content">Languages</div>
             <div class="clear"></div>
         </div>
         <!-- /.title_content -->
         
         <div class="skills">
             <!-- .skillbar -->
-            <div class="skillbar clearfix" data-percent="85%">
-                <div class="skillbar-title"><span>Wordpress</span></div>
+            <div class="skillbar clearfix" data-percent="95%">
+                <div class="skillbar-title"><span>Python</span></div>
                 <div class="skillbar-bar"></div>
-                <div class="skill-bar-percent">85%</div>
+                <div class="skill-bar-percent">95%</div>
             </div>
             <!-- /.skillbar -->
             
             <!-- .skillbar -->
-            <div class="skillbar clearfix" data-percent="75%">
-                <div class="skillbar-title"><span>Joomla</span></div>
+            <div class="skillbar clearfix" data-percent="90%">
+                <div class="skillbar-title"><span>C++</span></div>
                 <div class="skillbar-bar"></div>
-                <div class="skill-bar-percent">75%</div>
+                <div class="skill-bar-percent">90%</div>
             </div>
             <!-- /.skillbar -->
             
             <!-- .skillbar -->
-            <div class="skillbar clearfix" data-percent="60%">
-                <div class="skillbar-title"><span>Drupal</span></div>
+            <div class="skillbar clearfix" data-percent="95%">
+                <div class="skillbar-title"><span>Verilog</span></div>
                 <div class="skillbar-bar"></div>
-                <div class="skill-bar-percent">60%</div>
+                <div class="skill-bar-percent">95%</div>
             </div>
             <!-- /.skillbar -->
             
              <!-- .skillbar -->
-            <div class="skillbar clearfix" data-percent="89%">
-                <div class="skillbar-title"><span>Php</span></div>
+            <div class="skillbar clearfix" data-percent="60%">
+                <div class="skillbar-title"><span>Scala</span></div>
                 <div class="skillbar-bar"></div>
-                <div class="skill-bar-percent">89%</div>
+                <div class="skill-bar-percent">60%</div>
             </div>
             <!-- /.skillbar --> 
         </div>
