--- a/_includes/cv.html
+++ b/_includes/cv.html
@@ -10,7 +10,7 @@
 
         <!-- .title_content -->
         <div class="title_content" style="float: none;">
-            <div class="text_content">Designs skills</div>
+            <div class="text_content">Skills</div>
             <div class="clear"></div>
         </div>
         <!-- /.title_content -->
@@ -45,7 +45,7 @@
         
         <!-- .title_content -->
         <div class="title_content" style="float: none;">
-            <div class="text_content">Languages</div>
+            <div class="text_content">Programming Languages</div>
             <div class="clear"></div>
         </div>
         <!-- /.title_content -->
@@ -84,68 +84,26 @@
             <!-- /.skillbar --> 
         </div>
         
-         
-        <!-- .title_content -->
-        <div class="title_content" style="float: none;">
-            <div class="text_content">Office Skills</div>
-            <div class="clear"></div>
-        </div>
-        <!-- /.title_content -->
-            
-        <div class="skills">       
-            <!-- .skillbar -->
-            <div class="skillbar clearfix" data-percent="85%">
-                <div class="skillbar-title"><span>MS Excel</span></div>
-                <div class="skillbar-bar"></div>
-                <div class="skill-bar-percent">85%</div>
-            </div>
-            <!-- /.skillbar -->
-            
-            <!-- .skillbar -->
-            <div class="skillbar clearfix " data-percent="95%">
-                <div class="skillbar-title"><span>MS Word</span></div>
-                <div class="skillbar-bar"></div>
-                <div class="skill-bar-percent">95%</div>
-            </div>
-            <!-- /.skillbar -->
-            
-            <!-- .skillbar -->
-            <div class="skillbar clearfix " data-percent="60%">
-                <div class="skillbar-title"><span>Powerpoint</span></div>
-                <div class="skillbar-bar"></div>
-                <div class="skill-bar-percent">60%</div>
-            </div>
-            <!-- /.skillbar -->
-            
-            <!-- .skillbar -->
-            <div class="skillbar clearfix " data-percent="40%">
-                <div class="skillbar-title"><span>SharePoint</span></div>
-                <div class="skillbar-bar"></div>
-                <div class="skill-bar-percent">40%</div>
-            </div>
-            <!-- /.skillbar -->   
-		</div>
-        
         
         <!-- .title_content -->
         <div class="title_content" style="float: none;">
-            <div class="text_content">Hobbies Skills</div>
+            <div class="text_content">Frameworks</div>
             <div class="clear"></div>
         </div>
         <!-- /.title_content -->
         
         <div class="skills">
             <!-- .skillbar -->
-            <div class="skillbar clearfix" data-percent="60%">
-                <div class="skillbar-title"><span>Music</span></div>
+            <div class="skillbar clearfix" data-percent="95%">
+                <div class="skillbar-title"><span>Pytorch</span></div>
                 <div class="skillbar-bar"></div>
-                <div class="skill-bar-percent">60%</div>
+                <div class="skill-bar-percent">95%</div>
             </div>
             <!-- /.skillbar -->
             
             <!-- .skillbar -->
             <div class="skillbar clearfix " data-percent="95%">
-                <div class="skillbar-title"><span>Sport</span></div>
+                <div class="skillbar-title"><span>Tensorflow</span></div>
                 <div class="skillbar-bar"></div>
                 <div class="skill-bar-percent">95%</div>
             </div>
@@ -153,17 +111,41 @@
             
             <!-- .skillbar -->
             <div class="skillbar clearfix " data-percent="85%">
-                <div class="skillbar-title"><span>Reading</span></div>
+                <div class="skillbar-title"><span>Hadoop</span></div>
                 <div class="skillbar-bar"></div>
                 <div class="skill-bar-percent">85%</div>
             </div>
             <!-- /.skillbar -->
             
             <!-- .skillbar -->
-            <div class="skillbar clearfix " data-percent="70%">
-                <div class="skillbar-title"><span>Travelling</span></div>
+            <div class="skillbar clearfix " data-percent="85%">
+                <div class="skillbar-title"><span>Spark</span></div>
                 <div class="skillbar-bar"></div>
-                <div class="skill-bar-percent">70%</div>
+                <div class="skill-bar-percent">85%</div>
+            </div>
+            <!-- /.skillbar -->
+		
+	    <!-- .skillbar -->
+            <div class="skillbar clearfix " data-percent="80%">
+                <div class="skillbar-title"><span>CUDA</span></div>
+                <div class="skillbar-bar"></div>
+                <div class="skill-bar-percent">80%</div>
+            </div>
+            <!-- /.skillbar -->
+		
+	    <!-- .skillbar -->
+            <div class="skillbar clearfix " data-percent="80%">
+                <div class="skillbar-title"><span>MPI</span></div>
+                <div class="skillbar-bar"></div>
+                <div class="skill-bar-percent">80%</div>
+            </div>
+            <!-- /.skillbar -->
+		
+	    <!-- .skillbar -->
+            <div class="skillbar clearfix " data-percent="60%">
+                <div class="skillbar-title"><span>OpenGL</span></div>
+                <div class="skillbar-bar"></div>
+                <div class="skill-bar-percent">60%</div>
             </div>
             <!-- /.skillbar -->
         </div>
@@ -178,7 +160,7 @@
         
         <div class="skills">
             <!-- .skillbar -->
-            <div class="skillbar clearfix" data-percent="90%">
+            <div class="skillbar clearfix" data-percent="95%">
                 <div class="skillbar-title"><span>English</span></div>
                 <div class="skillbar-bar"></div>
                 <div class="skill-bar-percent">90%</div>
@@ -186,26 +168,26 @@
             <!-- /.skillbar -->
             
             <!-- .skillbar -->
-            <div class="skillbar clearfix " data-percent="80%">
-                <div class="skillbar-title"><span>French</span></div>
+            <div class="skillbar clearfix " data-percent="100%">
+                <div class="skillbar-title"><span>Mandarin</span></div>
                 <div class="skillbar-bar"></div>
-                <div class="skill-bar-percent">80%</div>
+                <div class="skill-bar-percent">100%</div>
             </div>
             <!-- /.skillbar -->
             
             <!-- .skillbar -->
             <div class="skillbar clearfix " data-percent="50%">
-                <div class="skillbar-title"><span>Spanish</span></div>
+                <div class="skillbar-title"><span>Taiwanese</span></div>
                 <div class="skillbar-bar"></div>
                 <div class="skill-bar-percent">50%</div>
             </div>
             <!-- /.skillbar -->
             
             <!-- .skillbar -->
-            <div class="skillbar clearfix " data-percent="60%">
-                <div class="skillbar-title"><span>Swiss</span></div>
+            <div class="skillbar clearfix " data-percent="30%">
+                <div class="skillbar-title"><span>Japanese</span></div>
                 <div class="skillbar-bar"></div>
-                <div class="skill-bar-percent">60%</div>
+                <div class="skill-bar-percent">30%</div>
             </div>
             <!-- /.skillbar -->
         </div>
