--- a/_includes/cv.html
+++ b/_includes/cv.html
@@ -223,14 +223,27 @@
         <!-- .attributes -->
         <ul class="attributes">
             <li class="first">
-                <h5>Web Developer <span class="duration"><i class="fa fa-calendar color"></i> 2011 - 2013</span></h5>
-                <h6><span class="fa fa-briefcase"></span> Name of Company</h6>
+                <h5>Research Assistant <span class="duration"><i class="fa fa-calendar color"></i> Jan. 2019 - June. 2019</span></h5>
+                <h6><span class="fa fa-briefcase"></span> National Tsing Hua University</h6>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscingVivamus sit amet ligula non lectus cursus egestas. Cras erat lorem, fringilla quis sagittis in, sagittis inNam leo tortor Nam leo tortor Vivamus.</p>
             </li>
+	    <li>
+                <h5>Teaching Assistant <span class="duration"><i class="fa fa-calendar color"></i> Sept. 2016 - Jan. 2018</span></h5>
+                <h6><span class="fa fa-briefcase"></span> National Tsing Hua University</h6>
+                <p>I was the TA of <a href="http://ic28.cs.nthu.edu.tw/cs412500/">Digital System Design</a> (DSD) and <a href="http://ic28.cs.nthu.edu.tw/cs210202/" target="_blank">Digital Logic Design</a> (DLD), both lectured by <a href="http://nthucad.cs.nthu.edu.tw/~cthuang/" target="_blank">Prof. Chih-Tsun Huang</a>. Built the websites by <a href="http://docs.getpelican.com/" target="_blank">Pelican</a>. Designed a <a href="https://github.com/wuhoward/PicoRV32_Assignment" target="_blank">term project</a> for DSD where students had to attach a coprocessor to <a href="https://github.com/cliffordwolf/picorv32" target="_blank">PicoRV32</a>.</p>
+            </li>
             <li>
-                <h5>Front-End Developer <span class="duration"><i class="fa fa-calendar color"></i> 2010 - 2011</span></h5>
-                <h6><span class="fa fa-briefcase"></span> Name of Company</h6>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscingVivamus sit amet ligula non lectus cursus egestas. Cras erat lorem, fringilla quis sagittis in, sagittis inNam leo tortor Nam leo tortor Vivamus.</p>
+                <h5>Second Lieutenant Political Warfare Officer <span class="duration"><i class="fa fa-calendar color"></i> Aug. 2014 - Aug. 2015</span></h5>
+                <h6><span class="fa fa-briefcase"></span> The Taiwan R.O.C. Army</h6>
+                <p>I was in charge of the political affairs of Battalion B of 21st Artillery Command. Counseled soldiers with mental health problems.</p>
+            </li>
+            <li>
+                <h5>Web Developer Intern <span class="duration"><i class="fa fa-calendar color"></i> 2010 - 2011</span></h5>
+                <h6><span class="fa fa-briefcase"></span> Yiezi Info. Inc.</h6>
+                <p>Created a RPG as a guide for travelers coming to Taipei.</p>
+                        <div class="timeline-youtube">
+				<iframe src="https://www.youtube.com/embed/2cPEi0d8jjI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        </div>
             </li>
 
         </ul>
@@ -291,41 +304,6 @@
 
 <div style="clear: both"></div>  
   
-  
-<!-- client reference -->
-<div class="row">
-<div class="col-md-12">   
-    
-<div class="reference clearfix"> 
-            
-         <!-- .title_content -->
-        <div class="title_content" style="margin-bottom:5px">
-            <div class="text_content">Client reference</div>
-            <div class="clear"></div>
-        </div>
-        <!-- /.title_content -->
-        
-
-        <ul>
-            <li class="clearfix">
-                <img src="http://placehold.it/100x100" class="img_reference" width="100" height="100" alt="">
-                <p>“Many desktop publishing packages and web page editors now use Lorem Ipsum as their default will model text, and a search for 'lorem ipsum' hope is uncover many web sites still”</p>
-                <span>John Doe, UX Designer</span>
-            </li>
-            <li class="clearfix">
-                <img src="http://placehold.it/100x100" class="img_reference" width="100" height="100" alt="">
-                <p>“very nice colleague she always helped me out if i didnt know something editors now use Lorem Ipsum as their default”</p>
-                <span>Leia Calvi, UX Designer</span>
-            </li>
-            <li class="clearfix">
-                <img src="http://placehold.it/100x100" class="img_reference" width="100" height="100" alt="">
-                <p>“old colleague and now close friend, she is really sweet and helpfull packages and web page editors now use Lorem Ipsum as their default will model text”</p>
-                <span>Maria Callas, UX Designer</span>
-            </li>
-        </ul>
-</div>
-</div>
-
      
 <div style="clear: both"></div>   
 </div>
