--- a/_includes/cv.html
+++ b/_includes/cv.html
@@ -230,20 +230,20 @@
 	    <li>
                 <h5>Teaching Assistant <span class="duration"><i class="fa fa-calendar color"></i> Sept. 2016 - Jan. 2018</span></h5>
                 <h6><span class="fa fa-briefcase"></span> National Tsing Hua University</h6>
-                <p>I was the TA of <a href="http://ic28.cs.nthu.edu.tw/cs412500/">Digital System Design</a> (DSD) and <a href="http://ic28.cs.nthu.edu.tw/cs210202/" target="_blank">Digital Logic Design</a> (DLD), both lectured by <a href="http://nthucad.cs.nthu.edu.tw/~cthuang/" target="_blank">Prof. Chih-Tsun Huang</a>. Built the websites by <a href="http://docs.getpelican.com/" target="_blank">Pelican</a>. Designed a <a href="https://github.com/wuhoward/PicoRV32_Assignment" target="_blank">term project</a> for DSD where students had to attach a coprocessor to <a href="https://github.com/cliffordwolf/picorv32" target="_blank">PicoRV32</a>.</p>
+                <p>I was the TA of Digital System Design and Digital Logic Design, both lectured by <a href="http://nthucad.cs.nthu.edu.tw/~cthuang/" target="_blank">Prof. Chih-Tsun Huang</a>. Built the websites by <a href="http://docs.getpelican.com/" target="_blank">Pelican</a>. Designed a <a href="https://github.com/wuhoward/PicoRV32_Assignment" target="_blank">term project</a>, where students had to attach a coprocessor to <a href="https://github.com/cliffordwolf/picorv32" target="_blank">PicoRV32</a>.</p>
             </li>
             <li>
-                <h5>Second Lieutenant Political Warfare Officer <span class="duration"><i class="fa fa-calendar color"></i> Aug. 2014 - Aug. 2015</span></h5>
+                <h5>Second Lieutenant<span class="duration"><i class="fa fa-calendar color"></i> Aug. 2014 - Aug. 2015</span></h5>
                 <h6><span class="fa fa-briefcase"></span> The Taiwan R.O.C. Army</h6>
                 <p>I was in charge of the political affairs of Battalion B of 21st Artillery Command. Counseled soldiers with mental health problems.</p>
             </li>
             <li>
-                <h5>Web Developer Intern <span class="duration"><i class="fa fa-calendar color"></i> 2010 - 2011</span></h5>
+                <h5>Web Developer Intern <span class="duration"><i class="fa fa-calendar color"></i> Mar. 2014 - July 2014</span></h5>
                 <h6><span class="fa fa-briefcase"></span> Yiezi Info. Inc.</h6>
                 <p>Created a RPG as a guide for travelers coming to Taipei.</p>
-                        <div class="timeline-youtube">
-				<iframe src="https://www.youtube.com/embed/2cPEi0d8jjI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                        </div>
+                <div class="timeline-youtube">
+			<iframe src="https://www.youtube.com/embed/2cPEi0d8jjI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>
             </li>
 
         </ul>
