--- a/_includes/cv.html
+++ b/_includes/cv.html
@@ -225,12 +225,12 @@
             <li class="first">
                 <h5>Research Assistant <span class="duration"><i class="fa fa-calendar color"></i> Jan. 2019 - June. 2019</span></h5>
                 <h6><span class="fa fa-briefcase"></span> National Tsing Hua University</h6>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscingVivamus sit amet ligula non lectus cursus egestas. Cras erat lorem, fringilla quis sagittis in, sagittis inNam leo tortor Nam leo tortor Vivamus.</p>
+                <p>Created a Network Morphism tool which can transform layers of pre-trained CNNs based on user-specified arguments. Enabled CNN model pruning with various importance metrics and efficient neural architecture search.</p>
             </li>
 	    <li>
                 <h5>Teaching Assistant <span class="duration"><i class="fa fa-calendar color"></i> Sept. 2016 - Jan. 2018</span></h5>
                 <h6><span class="fa fa-briefcase"></span> National Tsing Hua University</h6>
-                <p>I was the TA of Digital System Design and Digital Logic Design, both lectured by <a href="http://nthucad.cs.nthu.edu.tw/~cthuang/" target="_blank">Prof. Chih-Tsun Huang</a>. Built the websites by <a href="http://docs.getpelican.com/" target="_blank">Pelican</a>. Designed a <a href="https://github.com/wuhoward/PicoRV32_Assignment" target="_blank">term project</a>, where students had to attach a coprocessor to <a href="https://github.com/cliffordwolf/picorv32" target="_blank">PicoRV32</a>.</p>
+                <p>I was the TA of Digital System Design and Digital Logic Design, both lectured by <a href="http://nthucad.cs.nthu.edu.tw/~cthuang/" target="_blank">Prof. Chih-Tsun Huang</a>. Designed a <a href="https://github.com/wuhoward/PicoRV32_Assignment" target="_blank">term project</a>, where students had to attach a coprocessor to <a href="https://github.com/cliffordwolf/picorv32" target="_blank">PicoRV32</a>.</p>
             </li>
             <li>
                 <h5>Second Lieutenant<span class="duration"><i class="fa fa-calendar color"></i> Aug. 2014 - Aug. 2015</span></h5>
@@ -260,15 +260,20 @@
         <!-- .attributes -->
         <ul class="attributes">
             <li class="first">
-                <h5>Master of Engineering <span class="duration"><i class="fa fa-calendar color"></i> 2011 - 2013</span></h5>
-                <h6><span class="fa fa-book"></span> Name of University</h6>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscingVivamus sit amet ligula non lectus cursus egestas. Cras erat lorem, fringilla quis sagittis in, sagittis inNam leo tortor Nam leo tortor Vivamus.</p>
+                <h5>Master of Computer Science <span class="duration"><i class="fa fa-calendar color"></i> 2019 - 2021</span></h5>
+                <h6><span class="fa fa-book"></span> New York University (Courant Institute)</h6>
+                <p>Machine Learning, Computational Cognitive Modeling, Big Data, Honors Algorithm, Programming Language, Operating Systems</p>
             </li>
             <li>
-                <h5>Bachelor of Engineering <span class="duration"><i class="fa fa-calendar color"></i> 2010 - 2011</span></h5>
-                <h6><span class="fa fa-book"></span> Name of University</h6>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscingVivamus sit amet ligula non lectus cursus egestas. Cras erat lorem, fringilla quis sagittis in, sagittis inNam leo tortor Nam leo tortor Vivamus.</p>
+                <h5>Master of Computer Science <span class="duration"><i class="fa fa-calendar color"></i> 2016 - 2018</span></h5>
+                <h6><span class="fa fa-book"></span> National Tsing Hua University</h6>
+                <p>Deep Learning, Data Mining, Computer Graphics, Parallel Programming, Advanced Computer Architecture, Many-Core Systems, VLSI System Design</p>
             </li>
+            <li>
+                <h5>Bachelor of Electrical Engineering <span class="duration"><i class="fa fa-calendar color"></i> 2010 - 2014</span></h5>
+                <h6><span class="fa fa-book"></span> Name of University</h6>
+		<p>Digital Speech Processing, Computer Programming (C++), Algorithms, Data Structures, Computer Architecture</p>
+	    </li>
         </ul>
         <!-- /.attributes -->
         <br>  
