--- a/_includes/cv.html
+++ b/_includes/cv.html
@@ -17,7 +17,7 @@
         
         <div class="skills">
             <!-- .skillbar -->
-            <div class="skillbar clearfix" data-percent="95%">
+            <div class="skillbar clearfix" data-percent="85%">
                 <div class="skillbar-title"><span>Research</span></div>
                 <div class="skillbar-bar"></div>
                 <div class="skill-bar-percent">95%</div>
@@ -34,7 +34,7 @@
             <!-- /.skillbar -->
             
             <!-- .skillbar -->
-            <div class="skillbar clearfix" data-percent="65%">
+            <div class="skillbar clearfix" data-percent="90%">
                 <div class="skillbar-title"><span>Computer Architecture</span></div>
                 <div class="skillbar-bar"></div>
                 <div class="skill-bar-percent">65%</div>
@@ -66,7 +66,15 @@
                 <div class="skill-bar-percent">90%</div>
             </div>
             <!-- /.skillbar -->
-            
+		
+            <!-- .skillbar -->
+            <div class="skillbar clearfix" data-percent="85%">
+                <div class="skillbar-title"><span>Java</span></div>
+                <div class="skillbar-bar"></div>
+                <div class="skill-bar-percent">85%</div>
+            </div>
+            <!-- /.skillbar -->   
+		
             <!-- .skillbar -->
             <div class="skillbar clearfix" data-percent="95%">
                 <div class="skillbar-title"><span>Verilog</span></div>
@@ -240,7 +248,7 @@
             <li>
                 <h5>Web Developer Intern <span class="duration"><i class="fa fa-calendar color"></i> Mar. 2014 - July 2014</span></h5>
                 <h6><span class="fa fa-briefcase"></span> Yiezi Info. Inc.</h6>
-                <p>Created a RPG as a guide for travelers coming to Taipei.</p>
+                <p>Created a RPG as a travel guide to Taipei.</p>
                 <div class="timeline-youtube">
 			<iframe src="https://www.youtube.com/embed/2cPEi0d8jjI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
@@ -281,7 +289,7 @@
         
           <!-- .title_content -->
         <div class="title_content">
-            <div class="text_content">Awards</div>
+            <div class="text_content">Honor &amp; Award</div>
             <div class="clear"></div>
         </div>
         <!-- /.title_content -->
@@ -289,14 +297,14 @@
         <!-- .attributes -->
         <ul class="attributes">
             <li class="first">
-                <h5>Graphic &amp; Art Direction <span class="duration"><i class="fa fa-calendar color"></i> 2013 - 2014</span></h5>
-                <h6><span class="fa fa-trophy"></span> Name of Institute</h6>
-                <p>Emi Phasellus congue auctor risuspon, eget males. Pellentes que un imperdiet, odio quis orn sollicitud. Sed vitae lectus elementum mauris.</p>
+                <h5>Publication <span class="duration"><i class="fa fa-calendar color"></i> 2019</span></h5>
+                <h6><span class="fa fa-trophy"></span> IEEE/ACM DATE</h6>
+                <p>Data Locality Optimization of Depthwise Separable Convolutions for CNN Inference Accelerators</p>
             </li>
             <li>
-                <h5>Design &amp; Art Direction <span class="duration"><i class="fa fa-calendar color"></i> 2012 - 2013</span></h5>
-                <h6><span class="fa fa-trophy"></span> Name of Institute</h6>
-                <p>Emi Phasellus congue auctor risuspon, eget males. Pellentes que un imperdiet, odio quis orn sollicitud. Sed vitae lectus elementum mauris.</p>
+                <h5>Honorable Mention (Top 10)<span class="duration"><i class="fa fa-calendar color"></i> 2014</span></h5>
+                <h6><span class="fa fa-trophy"></span> ICCAD CAD Contest</h6>
+                <p>Simultaneous CNF Encoder Optimization with SAT Solver Setting Selections.</p>
             </li>
   
         </ul>
