--- a/_includes/cv.html
+++ b/_includes/cv.html
@@ -37,7 +37,7 @@
             <div class="skillbar clearfix" data-percent="90%">
                 <div class="skillbar-title"><span>Computer Architecture</span></div>
                 <div class="skillbar-bar"></div>
-                <div class="skill-bar-percent">65%</div>
+                <div class="skill-bar-percent">90%</div>
             </div>
             <!-- /.skillbar -->
         </div>
@@ -84,10 +84,10 @@
             <!-- /.skillbar -->
             
              <!-- .skillbar -->
-            <div class="skillbar clearfix" data-percent="60%">
+            <div class="skillbar clearfix" data-percent="70%">
                 <div class="skillbar-title"><span>Scala</span></div>
                 <div class="skillbar-bar"></div>
-                <div class="skill-bar-percent">60%</div>
+                <div class="skill-bar-percent">70%</div>
             </div>
             <!-- /.skillbar --> 
         </div>
@@ -116,20 +116,44 @@
                 <div class="skill-bar-percent">95%</div>
             </div>
             <!-- /.skillbar -->
-            
+ 
+	    <!-- .skillbar -->
+            <div class="skillbar clearfix " data-percent="80%">
+                <div class="skillbar-title"><span>Pandas</span></div>
+                <div class="skillbar-bar"></div>
+                <div class="skill-bar-percent">80%</div>
+            </div>
+            <!-- /.skillbar -->
+
+	    <!-- .skillbar -->
+            <div class="skillbar clearfix " data-percent="95%">
+                <div class="skillbar-title"><span>Scikit-learn</span></div>
+                <div class="skillbar-bar"></div>
+                <div class="skill-bar-percent">95%</div>
+            </div>
+            <!-- /.skillbar -->		
+
+	    <!-- .skillbar -->
+            <div class="skillbar clearfix " data-percent="90%">
+                <div class="skillbar-title"><span>Matplotlib</span></div>
+                <div class="skillbar-bar"></div>
+                <div class="skill-bar-percent">90%</div>
+            </div>
+            <!-- /.skillbar -->	
+		
             <!-- .skillbar -->
             <div class="skillbar clearfix " data-percent="85%">
-                <div class="skillbar-title"><span>Hadoop</span></div>
+                <div class="skillbar-title"><span>Hadoop (Java)</span></div>
                 <div class="skillbar-bar"></div>
                 <div class="skill-bar-percent">85%</div>
             </div>
             <!-- /.skillbar -->
             
             <!-- .skillbar -->
-            <div class="skillbar clearfix " data-percent="85%">
-                <div class="skillbar-title"><span>Spark</span></div>
+            <div class="skillbar clearfix " data-percent="80%">
+                <div class="skillbar-title"><span>Spark (Scala)</span></div>
                 <div class="skillbar-bar"></div>
-                <div class="skill-bar-percent">85%</div>
+                <div class="skill-bar-percent">80%</div>
             </div>
             <!-- /.skillbar -->
 		
@@ -238,7 +262,7 @@
 	    <li>
                 <h5>Teaching Assistant <span class="duration"><i class="fa fa-calendar color"></i> Sept. 2016 - Jan. 2018</span></h5>
                 <h6><span class="fa fa-briefcase"></span> National Tsing Hua University</h6>
-                <p>I was the TA of Digital System Design and Digital Logic Design, both lectured by <a href="http://nthucad.cs.nthu.edu.tw/~cthuang/" target="_blank">Prof. Chih-Tsun Huang</a>. Designed a <a href="https://github.com/wuhoward/PicoRV32_Assignment" target="_blank">term project</a>, where students had to attach a coprocessor to <a href="https://github.com/cliffordwolf/picorv32" target="_blank">PicoRV32</a>.</p>
+                <p>TA of Digital System Design and Digital Logic Design, both lectured by <a href="http://nthucad.cs.nthu.edu.tw/~cthuang/" target="_blank">Prof. Chih-Tsun Huang</a>. Designed a <a href="https://github.com/wuhoward/PicoRV32_Assignment" target="_blank">term project</a>, where students had to attach a coprocessor to <a href="https://github.com/cliffordwolf/picorv32" target="_blank">PicoRV32</a>.</p>
             </li>
             <li>
                 <h5>Second Lieutenant<span class="duration"><i class="fa fa-calendar color"></i> Aug. 2014 - Aug. 2015</span></h5>
@@ -268,18 +292,18 @@
         <!-- .attributes -->
         <ul class="attributes">
             <li class="first">
-                <h5>Master of Computer Science <span class="duration"><i class="fa fa-calendar color"></i> 2019 - 2021</span></h5>
+                <h5>Master in Computer Science <span class="duration"><i class="fa fa-calendar color"></i> 2019 - 2021</span></h5>
                 <h6><span class="fa fa-book"></span> New York University (Courant Institute)</h6>
-                <p>Machine Learning, Computational Cognitive Modeling, Big Data, Honors Algorithm, Programming Language, Operating Systems</p>
+                <p>Machine Learning, Computational Cognitive Modeling, Big Data, Honors Algorithms, Programming Languages, Operating Systems</p>
             </li>
             <li>
-                <h5>Master of Computer Science <span class="duration"><i class="fa fa-calendar color"></i> 2016 - 2018</span></h5>
+                <h5>Master in Computer Science <span class="duration"><i class="fa fa-calendar color"></i> 2016 - 2018</span></h5>
                 <h6><span class="fa fa-book"></span> National Tsing Hua University</h6>
                 <p>Deep Learning, Data Mining, Computer Graphics, Parallel Programming, Advanced Computer Architecture, Many-Core Systems, VLSI System Design</p>
             </li>
             <li>
-                <h5>Bachelor of Electrical Engineering <span class="duration"><i class="fa fa-calendar color"></i> 2010 - 2014</span></h5>
-                <h6><span class="fa fa-book"></span> Name of University</h6>
+                <h5>Bachelor in Electrical Engineering <span class="duration"><i class="fa fa-calendar color"></i> 2010 - 2014</span></h5>
+                <h6><span class="fa fa-book"></span> National Taiwan University</h6>
 		<p>Digital Speech Processing, Computer Programming (C++), Algorithms, Data Structures, Computer Architecture</p>
 	    </li>
         </ul>
@@ -289,7 +313,7 @@
         
           <!-- .title_content -->
         <div class="title_content">
-            <div class="text_content">Honor &amp; Award</div>
+            <div class="text_content">Honor &amp; Awards</div>
             <div class="clear"></div>
         </div>
         <!-- /.title_content -->
@@ -299,7 +323,7 @@
             <li class="first">
                 <h5>Publication <span class="duration"><i class="fa fa-calendar color"></i> 2019</span></h5>
                 <h6><span class="fa fa-trophy"></span> IEEE/ACM DATE</h6>
-                <p>Data Locality Optimization of Depthwise Separable Convolutions for CNN Inference Accelerators</p>
+                <p><a href="https://ieeexplore.ieee.org/document/8715097" target="_blank">Data Locality Optimization of Depthwise Separable Convolutions for CNN Inference Accelerators</a></p>
             </li>
             <li>
                 <h5>Honorable Mention (Top 10)<span class="duration"><i class="fa fa-calendar color"></i> 2014</span></h5>
