--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -8,6 +8,7 @@
     <div class="container-portfolio">
 
         <!-- #filters -->
+        
         <ul id="filters" class="clearfix">
             <li><span class="filter active" data-filter="catWeb catGraphic catMotion logo">All</span></li>
             <li><span class="filter" data-filter="catWeb">Web Design</span></li>
@@ -16,6 +17,13 @@
             <li><span class="filter" data-filter="logo">Logo</span></li>
         </ul>
         <!-- /#filters -->
+        <ul>
+  {% for post in site.posts %}
+    <li>
+      <a href="{{ post.url }}">{{ post.title }}</a>
+    </li>
+  {% endfor %}
+</ul>
 
         <!-- #portfoliolist -->
         <div id="portfoliolist">
