--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -21,6 +21,14 @@
                         <li><span class="span-info"><i class="glyphicon glyphicon-envelope"></i> Email:</span> haoning.wu@nyu.edu</li>
                         <li><span class="span-info"><i class="glyphicon glyphicon-phone"></i> Phone:</span> +(917) 302-5403</li>
                     </ul>
+                        
+                             <ul>
+  {% for post in site.posts %}
+    <li>
+      <a href="{{ post.url }}">{{ post.title }}</a>
+    </li>
+  {% endfor %}
+</ul>
                 </div>
                 <!-- /Contact Info -->
                 <div class="clear"></div>
