--- a/_includes/profile.html
+++ b/_includes/profile.html
@@ -50,7 +50,13 @@
             </li>
 
         </ul>
-
+<ul>
+  {% for post in site.posts %}
+    <li>
+      <a href="{{ post.url }}">{{ post.title }}</a>
+    </li>
+  {% endfor %}
+</ul>
 
         <!-- 
 	<p style="margin-bottom:20px">
