--- a/_includes/blog.html
+++ b/_includes/blog.html
@@ -10,206 +10,56 @@
             <!-- start Page Blog -->
             <section id="blog-page">
 
-                <!-- Post 1 -->	
-                <article id="post-1" class="blog-article">                    
+                <div class="clear"></div>
+                {% for post in site.posts %}
+                    <article id="{{ post.title }}" class="blog-article">                    
 
-                    <div class="col-md-12">
+                        <div class="col-md-12">
 
-                        <div class="row">
+                            <div class="row">
 
-                            <div class="col-md-12 post_media">
-                                <div class="post-format-icon">
-                                    <a href="#" class="item-date"><span class="fa fa-picture-o"></span></a>
+                                <div class="col-md-12 post_media">
+
+                                    <div class="post-format-icon">
+                                        <a href="#" class="item-date"><span class="fa fa-pencil"></span></a>
+                                    </div>
+
                                 </div>
-                                <div class="media">
-                                    <div class="he-wrap tpl2">
-                                        <div id="carousel-1" class="carousel slide" data-ride="carousel">
+                            </div>
 
-                                            <ol class="carousel-indicators">
-                                                <li data-target="#carousel-1" data-slide-to="0" class="active"></li>
-                                                <li data-target="#carousel-1" data-slide-to="1"></li>
-                                                <li data-target="#carousel-1" data-slide-to="2"></li>
-                                            </ol>
+                            <div class="row">
+                                <div class="col-md-12 post_content">
+                                    <div class="content post_format_standart">
+                                        <div class="top_c ">
 
-                                            <div class="carousel-inner">
-
-                                                <div class="item active">
-                                                    <img src="images/blog/blog-1.jpg" alt="" />
-                                                    <div class="carousel-caption">
-                                                        <h4>First Thumbnail label</h4>
-                                                        <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-                                                    </div>
-                                                </div>
-
-
-                                                <div class="item">
-                                                    <img src="images/blog/blog-2.jpg" alt="" />
-                                                    <div class="carousel-caption">
-                                                        <h4>First Thumbnail label</h4>
-                                                        <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-                                                    </div>
-                                                </div>
-
-                                                <div class="item">
-                                                    <img src="images/blog/blog-3.jpg" alt="" />
-                                                    <div class="carousel-caption">
-                                                        <h4>First Thumbnail label</h4>
-                                                        <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-                                                    </div>
-                                                </div>
-
+                                            <div class="title_content">
+                                                <div class="text_content"><a href="#post-2" class="read_more">Blog Aside post</a></div>
+                                                <div class="clear"></div>
                                             </div>
 
-                                            <a class="left carousel-control" href="#carousel-1" data-slide="prev">
-                                                <span class="glyphicon glyphicon-chevron-left"></span>
-                                            </a>
+                                            <ul class="info">
+                                                <li><i class="glyphicon glyphicon-time"></i> {{ post.date }} </li>
+                                                <li><i class="glyphicon glyphicon-tag"></i> {{ post.tags }} </li>
+                                            </ul>
 
-                                            <a class="right carousel-control" href="#carousel-1" data-slide="next">
-                                                <span class="glyphicon glyphicon-chevron-right"></span>
-                                            </a>
-
+                                            <div class="blog-content">
+                                                <p><i class="fa fa-quote-left"></i> {{ post.excerpt }} </p></div>
                                         </div>
-                                    </div>
+                                    </div>	
+
+                                    <a href="{{ post.url }}" class="read_m pull-right">Read More <i class='glyphicon glyphicon-chevron-right'></i></a>
 
                                 </div>
                             </div>
+
                         </div>
-
-                        <div class="row">
-                            <div class="col-md-12 post_content">
-                                <div class="content post_format_standart">
-                                    <div class="top_c ">
-
-                                        <div class="title_content">
-                                            <div class="text_content"><a href="#post-1" >Blog Post Gallery</a></div>
-                                            <div class="clear"></div>
-                                        </div>
-
-                                        <ul class="info">
-                                            <li><i class="glyphicon glyphicon-comment"></i> 2 Comments</li>
-                                            <li><i class="glyphicon glyphicon-time"></i> January 31, 2014</li>
-                                            <li><i class="glyphicon glyphicon-user"></i> by Jane Doe</li>
-                                            <li><i class="glyphicon glyphicon-tag"></i> jquery, slider, web design</li>
-                                        </ul>
-
-                                        <div class="blog-content">
-                                            <p><i class="fa fa-quote-left"></i> Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo...</p></div>
-                                    </div>
-                                </div>	
-
-                                <a href="#post-1" class="read_m pull-right">Read More <i class='glyphicon glyphicon-chevron-right'></i></a>
-
-                            </div>
-                        </div>
-
-                    </div>
-                </article>
-                <!-- End Post 1 -->
-
-                <div class="clear"></div>
-
+                    </article>
+                {% endfor %}
                 <!-- Post 2 -->
-                <article id="post-2" class="blog-article">                    
-
-                    <div class="col-md-12">
-
-                        <div class="row">
-
-                            <div class="col-md-12 post_media">
-
-                                <div class="post-format-icon">
-                                    <a href="#" class="item-date"><span class="fa fa-pencil"></span></a>
-                                </div>
-
-                            </div>
-                        </div>
-
-                        <div class="row">
-                            <div class="col-md-12 post_content">
-                                <div class="content post_format_standart">
-                                    <div class="top_c ">
-
-                                        <div class="title_content">
-                                            <div class="text_content"><a href="#post-2" class="read_more">Blog Aside post</a></div>
-                                            <div class="clear"></div>
-                                        </div>
-
-                                        <ul class="info">
-                                            <li><i class="glyphicon glyphicon-comment"></i> 2 Comments</li>
-                                            <li><i class="glyphicon glyphicon-time"></i> January 31, 2014</li>
-                                            <li><i class="glyphicon glyphicon-user"></i> by Jane Doe</li>
-                                            <li><i class="glyphicon glyphicon-tag"></i> php, web design</li>
-                                        </ul>
-
-                                        <div class="blog-content">
-                                            <p><i class="fa fa-quote-left"></i> Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo...</p></div>
-                                    </div>
-                                </div>	
-
-                                <a href="#post-2" class="read_m pull-right">Read More <i class='glyphicon glyphicon-chevron-right'></i></a>
-
-                            </div>
-                        </div>
-
-                    </div>
-                </article>
+                
                 <!-- End Post 2 -->
 
                 <div class="clear"></div>
-
-                <!-- Post 3 -->
-                <article id="post-3" class="blog-article">                    
-
-                    <div class="col-md-12">
-
-                        <div class="row">
-
-                            <div class="col-md-12 post_media">
-
-                                <div class="post-format-icon">
-                                    <a href="#" class="item-date"><span class="fa fa-picture-o"></span></a>
-                                </div>
-
-                                <div class="media">
-                                    <div class="he-wrap tpl2">
-                                        <img src="images/blog/blog-4.jpg" class="img-hover" alt="" />
-                                    </div>
-
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="row">
-                            <div class="col-md-12 post_content">
-                                <div class="content post_format_standart">
-                                    <div class="top_c ">
-
-                                        <div class="title_content">
-                                            <div class="text_content"><a href="#post-3" class="read_more">Blog Post Image</a></div>
-                                            <div class="clear"></div>
-                                        </div>
-
-                                        <ul class="info">
-                                            <li><i class="glyphicon glyphicon-comment"></i> 2 Comments</li>
-                                            <li><i class="glyphicon glyphicon-time"></i> January 31, 2014</li>
-                                            <li><i class="glyphicon glyphicon-user"></i> by Jane Doe</li>
-                                            <li><i class="glyphicon glyphicon-tag"></i> php, web design</li>
-                                        </ul>
-
-                                        <div class="blog-content">
-                                            <p><i class="fa fa-quote-left"></i> Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo...</p></div>
-                                    </div>
-                                </div>	
-
-                                <a href="#post-3" class="read_m pull-right">Read More <i class='glyphicon glyphicon-chevron-right'></i></a>
-
-                            </div>
-                        </div>
-
-                    </div>
-                </article>
-
-                <!-- End Post 3 -->
 
             </section>
 
