--- a/_includes/blog.html
+++ b/_includes/blog.html
@@ -33,12 +33,12 @@
                                         <div class="top_c ">
 
                                             <div class="title_content">
-                                                <div class="text_content"><a href="#post-2" class="read_more">{{ post.title }}</a></div>
+                                                <div class="text_content"><a href="#{{ post.id }}" class="read_more">{{ post.title }}</a></div>
                                                 <div class="clear"></div>
                                             </div>
 
                                             <ul class="info">
-                                                <li><i class="glyphicon glyphicon-time"></i> {{ page.date | date: "%B %-d, %Y" }} </li>
+                                                <li><i class="glyphicon glyphicon-time"></i> {{ post.date | date: "%B %-d, %Y" }} </li>
                                                 <li><i class="glyphicon glyphicon-tag"></i> {{ post.tags }} </li>
                                             </ul>
 
@@ -47,7 +47,7 @@
                                         </div>
                                     </div>	
 
-                                    <a href="{{ post.id }}" class="read_m pull-right">Read More <i class='glyphicon glyphicon-chevron-right'></i></a>
+                                    <a href="#{{ post.id }}" class="read_m pull-right">Read More <i class='glyphicon glyphicon-chevron-right'></i></a>
 
                                 </div>
                             </div>
@@ -102,8 +102,8 @@
 
 
                                 <div class="col-md-12"  style="margin-top: 20px;">
-                                    <a href="{{ page.next.id }}" class="readmore" id="pagination"><i class="glyphicon glyphicon-chevron-right"></i></a>
-                                    <a href="{{ page.previous.id }}" class="readmore" id="pagination"><i class="glyphicon glyphicon-chevron-left"></i></a>
+                                    <a href="#{{ page.next.id }}" class="readmore" id="pagination"><i class="glyphicon glyphicon-chevron-right"></i></a>
+                                    <a href="#{{ page.previous.id }}" class="readmore" id="pagination"><i class="glyphicon glyphicon-chevron-left"></i></a>
                                     <a href="#blog" class="readmore"><i class="glyphicon glyphicon-chevron-left"></i> All Posts</a>
                                 </div>
 
