--- a/_includes/blog.html
+++ b/_includes/blog.html
@@ -93,7 +93,7 @@
                                 <div class="info">
 
                                     <ul class="info-post">
-                                        <li><i class="glyphicon glyphicon-time"></i> {{ page.date | date: "%B %-d, %Y" }}</li>
+                                        <li><i class="glyphicon glyphicon-time"></i> {{ post.date | date: "%B %-d, %Y" }}</li>
                                         <li><i class="glyphicon glyphicon-tag"></i> {{ post.tags }}</li>
                                     </ul>
                                 </div>
@@ -102,8 +102,8 @@
 
 
                                 <div class="col-md-12"  style="margin-top: 20px;">
-                                    <a href="#{{ page.next.id }}" class="readmore" id="pagination"><i class="glyphicon glyphicon-chevron-right"></i></a>
-                                    <a href="#{{ page.previous.id }}" class="readmore" id="pagination"><i class="glyphicon glyphicon-chevron-left"></i></a>
+                                    <a href="#{{ post.next.id }}" class="readmore" id="pagination"><i class="glyphicon glyphicon-chevron-right"></i></a>
+                                    <a href="#{{ post.previous.id }}" class="readmore" id="pagination"><i class="glyphicon glyphicon-chevron-left"></i></a>
                                     <a href="#blog" class="readmore"><i class="glyphicon glyphicon-chevron-left"></i> All Posts</a>
                                 </div>
 
